--- a/ML_Algos_From_Scratch/Lasso Regression from Scratch/lasso_v2.ipynb
+++ b/ML_Algos_From_Scratch/Lasso Regression from Scratch/lasso_v2.ipynb
@@ -5,7 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lasso Regression From Scratch\n",
+    "<a href=\"https://www.youtube.com/watch?v=_9qyOWSlss4&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=22&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Lasso Regression From Scratch </b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/uQuKdZH.png)](https://www.youtube.com/watch?v=_9qyOWSlss4&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=22&ab_channel=Rohan-Paul-AI)\n",
+    "\n",
+    "----------------\n",
     "\n",
     "## [You can download the csv file from here](https://github.com/rohan-paul/YT_Data_Sources/blob/main/Lasso%20Regression%20from%20Scratch/data.csv)\n",
     "\n",
