--- a/ML_Algos_From_Scratch/Lasso Regression from Scratch/lasso_v2.ipynb
+++ b/ML_Algos_From_Scratch/Lasso Regression from Scratch/lasso_v2.ipynb
@@ -5,9 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.youtube.com/watch?v=_9qyOWSlss4&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=22&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Lasso Regression From Scratch </b></h1></a>\n",
+    "<a href=\"https://www.youtube.com/watch?v=TO193TEfRRc&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=23&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Lasso Regression From Scratch </b></h1></a>\n",
     "\n",
-    "[![IMAGE ALT TEXT](https://imgur.com/uQuKdZH.png)](https://www.youtube.com/watch?v=_9qyOWSlss4&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=22&ab_channel=Rohan-Paul-AI)\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/uQuKdZH.png)](https://www.youtube.com/watch?v=TO193TEfRRc&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=23&ab_channel=Rohan-Paul-AI)\n",
     "\n",
     "----------------\n",
     "\n",
