--- a/Time-Series/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting.ipynb
+++ b/Time-Series/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting.ipynb
@@ -214,9 +214,13 @@
    "id": "06a378ae",
    "metadata": {},
    "source": [
-    "## seasonal_decompose from statsmodel\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Seasonal Decompose of Time Series Data with statsmodel </h3>\n",
+    "</div>\n",
     "\n",
-    "seasonal_decompose is a function that decomposes a time series into three main components: trend, seasonal, and residual (or irregular). The decomposition is based on the assumption that the observed time series is a product (multiplicative model) or a sum (additive model) of these three components. This function is particularly useful for understanding the underlying structure of a time series and can help you identify patterns, trends, and seasonality in the data.\n",
+    "---------------------------\n",
+    "\n",
+    "**`seasonal_decompose`** is a function that decomposes a time series into three main components: trend, seasonal, and residual (or irregular). The decomposition is based on the assumption that the observed time series is a product (multiplicative model) or a sum (additive model) of these three components. This function is particularly useful for understanding the underlying structure of a time series and can help you identify patterns, trends, and seasonality in the data.\n",
     "\n",
     "-----------\n",
     "\n",
