--- a/Time-Series/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting.ipynb
+++ b/Time-Series/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting.ipynb
@@ -1520,6 +1520,22 @@
     "\n",
     "test.groupby(['date'])['error'].mean().sort_values(ascending=False).head(10)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "544805e4",
+   "metadata": {},
+   "source": [
+    "### Some other great sources referred to for this Notebook\n",
+    "\n",
+    "https://github.com/panambY/Hourly_Energy_Consumption\n",
+    "\n",
+    "https://github.com/DanielDaCosta/energy-forecast\n",
+    "\n",
+    "https://github.com/rmhachar/time-series-forecasting-methods\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
