--- a/PyTorch-Techniques/48-get_total_number_of_parameters_of_a_neural_network_mode_pytorch.ipynb
+++ b/PyTorch-Techniques/48-get_total_number_of_parameters_of_a_neural_network_mode_pytorch.ipynb
@@ -29,6 +29,16 @@
    "outputs": [],
    "source": [
     "def count_torch_model_parameters(model):\n",
+    "    \"\"\"\n",
+    "    Counts the number of trainable parameters in a PyTorch model.\n",
+    "\n",
+    "    Args:\n",
+    "        model (nn.Module): The PyTorch model.\n",
+    "\n",
+    "    Returns:\n",
+    "        int: The total number of trainable parameters.\n",
+    "\n",
+    "    \"\"\"\n",
     "    param_table = PrettyTable(['Layers', 'Parameters'])\n",
     "    params_total = 0\n",
     "    \n",
