--- a/Time-Series/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting.ipynb
+++ b/Time-Series/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting/XGBoost_for_TIme_Series_Dataset_Demand_Forecasting.ipynb
@@ -829,10 +829,13 @@
     "    -------\n",
     "    None\n",
     "    \"\"\"\n",
+    "    \n",
+    "    \n",
     "    # Assert if the required columns are present in the dataframe\n",
     "    assert 'year' in df.columns, \"Input dataframe must have a 'year' column\"\n",
     "    assert 'month' in df.columns, \"Input dataframe must have a 'month' column\"\n",
     "    assert dependent_var in df.columns, f\"Input dataframe must have a '{dependent_var}' column\"\n",
+    "    \"\"\" Please note that this function assumes that the input dataframe has columns named year and month, and the column representing the dependent variable (in this case, 'PJME_MW'). If your dataframe uses different column names for these variables, you should modify the function accordingly. \"\"\"\n",
     "\n",
     "    df_copy = df.copy()\n",
     "\n",
