--- a/PyTorch-Techniques/54-Quantization-Mixed-Precision.ipynb
+++ b/PyTorch-Techniques/54-Quantization-Mixed-Precision.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,6 +73,17 @@
    ],
    "source": [
     "class LeNet5(nn.Module):\n",
+    "    \"\"\"\n",
+    "    LeNet-5 model architecture for image classification.\n",
+    "\n",
+    "    Attributes:\n",
+    "        conv1 (nn.Conv2d): First convolutional layer.\n",
+    "        conv2 (nn.Conv2d): Second convolutional layer.\n",
+    "        fc1 (nn.Linear): First fully connected layer.\n",
+    "        fc2 (nn.Linear): Second fully connected layer.\n",
+    "        fc3 (nn.Linear): Third fully connected layer.\n",
+    "\n",
+    "    \"\"\"\n",
     "    def __init__(self):\n",
     "        super(LeNet5, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
@@ -80,6 +93,16 @@
     "        self.fc3 = nn.Linear(84, 10)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward pass of the LeNet-5 model.\n",
+    "\n",
+    "        Args:\n",
+    "            x (torch.Tensor): Input tensor.\n",
+    "\n",
+    "        Returns:\n",
+    "            torch.Tensor: Output tensor.\n",
+    "\n",
+    "        \"\"\"\n",
     "        x = F.max_pool2d(\n",
     "            F.relu(self.conv1(x)), (2, 2))\n",
     "        x = F.max_pool2d(\n",
@@ -96,6 +119,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,6 +156,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,6 +199,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,6 +253,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,6 +291,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -298,6 +326,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -346,6 +375,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -364,6 +394,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -412,6 +443,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -457,6 +489,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
