--- a/Segmentation-for-Intestine-Cancer-TensorFlow-UW-Madison-Kaggle-Competition/Mask_image_wrapping_with_rle_decode.ipynb
+++ b/Segmentation-for-Intestine-Cancer-TensorFlow-UW-Madison-Kaggle-Competition/Mask_image_wrapping_with_rle_decode.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -431,6 +432,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -485,6 +487,19 @@
    "outputs": [],
    "source": [
     "def rle_decode(rle, height, width , fill=255):\n",
+    "    \"\"\"\n",
+    "    Decodes a run-length encoded (RLE) string into a binary mask.\n",
+    "\n",
+    "    Args:\n",
+    "        rle (str): Run-length encoded string.\n",
+    "        height (int): Height of the output mask.\n",
+    "        width (int): Width of the output mask.\n",
+    "        fill (int, optional): Value to fill the mask with. Defaults to 255.\n",
+    "\n",
+    "    Returns:\n",
+    "        numpy.ndarray: Decoded binary mask.\n",
+    "\n",
+    "    \"\"\"\n",
     "    s = rle.split()\n",
     "    # print('s after split ', s)\n",
     "    start, length = [np.asarray(x, dtype=int) for x in (s[0:][::2], s[1:][::2])]\n",
