--- a/NLP/DeBERTa Fine Tuning-for Amazon Review Dataset Pytorch.ipynb
+++ b/NLP/DeBERTa Fine Tuning-for Amazon Review Dataset Pytorch.ipynb
@@ -3,6 +3,17 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "848860a3",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://www.youtube.com/watch?v=-rqmj_tfQLo&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=34&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video - Debarta fine tuning for Amazon Review Dataset | NLP</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/WbaxGoM.png)](https://www.youtube.com/watch?v=-rqmj_tfQLo&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=34&ab_channel=Rohan-Paul-AI)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "ce5c8e9f",
    "metadata": {
     "papermill": {
