--- a/NLP/DeBERTa Fine Tuning-for Amazon Review Dataset Pytorch.ipynb
+++ b/NLP/DeBERTa Fine Tuning-for Amazon Review Dataset Pytorch.ipynb
@@ -26,6 +26,11 @@
     "tags": []
    },
    "source": [
+    "\n",
+    "### [Data Source](https://github.com/rohan-paul/YT_Data_Sources/blob/main/Amazon-Review-Text-NLP/amazon-review/cleaned_reviews.csv)\n",
+    "\n",
+    "-----------------------\n",
+    "\n",
     "### Key parts of this Fine Tuning Strategies\n",
     "\n",
     "1. Mean Pooling\n",
@@ -1058,7 +1063,7 @@
     "### Explanation for `train_one_epoch`\n",
     "\n",
     "\n",
-    "In the context of training a model, the dataloader object is responsible for serving batches of data. It also handles shuffling of the data and parallelism in the loading of the data onto the device (e.g., a GPU).\n",
+    "The dataloader object is responsible for serving batches of data. It also handles shuffling of the data and parallelism in the loading of the data onto the device (e.g., a GPU).\n",
     "\n",
     "When enumerate is applied to dataloader, it generates pairs (step, data), where step is the count of batches that have been loaded so far and data is the batch data at the current step.\n",
     "\n",
