--- a/NLP/Transformer_From_Scratch/Transformer_From_Scratch.ipynb
+++ b/NLP/Transformer_From_Scratch/Transformer_From_Scratch.ipynb
@@ -126,7 +126,8 @@
         "\n",
         "model = BertModel.from_pretrained(model_ckpt)\n",
         "\n",
-        "show(model, 'bert', tokenizer, text, display_mode = 'light', layer=0, head=8 )\n",
+        "# show(model, 'bert', tokenizer, text, display_mode = 'light', layer=0, head=8 )\n",
+        "# Commenting out the above line as Github will NOT render the bertviz plot and for that reason anything below this line was NOT getting rendered in the  notebook at all\n",
         "\n"
       ]
     },
