--- a/ML_Algos_From_Scratch/Linear Regression From Scratch with Pure Python/Linear_Regression_From_Scratch.ipynb
+++ b/ML_Algos_From_Scratch/Linear Regression From Scratch with Pure Python/Linear_Regression_From_Scratch.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Regression from Scratch with Pure Python"
+    "<a href=\"https://www.youtube.com/watch?v=M7PgCJ-5twg&list=PLxqBkZuBynVRMORlFw95iNTp9aZzmmz4Y&index=18\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video - Linear Regression From Scratch with Pure Python</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/D2yQxiU.png)](https://www.youtube.com/watch?v=M7PgCJ-5twg&list=PLxqBkZuBynVRMORlFw95iNTp9aZzmmz4Y&index=18)"
    ]
   },
   {
