--- a/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Example_Code_Using_HF_Trainer_API.ipynb
+++ b/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Example_Code_Using_HF_Trainer_API.ipynb
@@ -47,7 +47,9 @@
     "    return {\"loss\": loss, \"logits\": logits}\n",
     "\n",
     "\n",
-    "# 👉 We will then instantiate the `TrainingArguments` and the `Trainer`. The `TrainingArguments` define the set of hyperparameters that we will use for training. We use the same hyperparameters as in our code:\n",
+    "# 👉 We will then instantiate the `TrainingArguments` and the `Trainer`. \n",
+    "# The `TrainingArguments` define the set of hyperparameters that we will use for training. \n",
+    "# We use the same hyperparameters as in our code:\n",
     "\n",
     "from transformers import Trainer, TrainingArguments\n",
     "\n",
