--- a/LlaMa-2/LlaMa-2-FineTuning.ipynb
+++ b/LlaMa-2/LlaMa-2-FineTuning.ipynb
@@ -21,20 +21,36 @@
    "metadata": {},
    "source": [
     "# From source. For running the examples in the repository\n",
-    "# Clone the repository and install it with pip:\n",
+    "# Clone the repository and install it with pip:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/lvwerra/trl.git\n",
     "\n",
-    "git clone https://github.com/lvwerra/trl.git\n",
-    "cd trl/\n",
-    "pip install .\n",
+    "!cd trl/\n",
     "\n",
-    "\n",
-    "python examples/scripts/sft_trainer.py \\\n",
+    "! pip install ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```py\n",
+    "!python examples/scripts/sft_trainer.py \\\n",
     "  --model_name meta-llama/Llama-2-7b-hf \\\n",
     "  --dataset_name timdettmers/openassistant-guanaco \\\n",
     "  --load_in_4bit \\\n",
     "  --use_peft \\\n",
     "  --batch_size 4 \\\n",
-    "  --gradient_accumulation_steps 2"
+    "  --gradient_accumulation_steps 2\n",
+    "\n",
+    "```"
    ]
   }
  ],
