--- a/LlaMa-2/Local-Inferencing_LlaMa-2.ipynb
+++ b/LlaMa-2/Local-Inferencing_LlaMa-2.ipynb
@@ -8,7 +8,7 @@
       },
       "outputs": [],
       "source": [
-        "# !pip install -qU transformers"
+        "!pip install -qU transformers"
       ]
     },
     {
